--- a/app-dystrybutor-obszar.html
+++ b/app-dystrybutor-obszar.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="assets/css/base.compiled.css?h=1793166d0cf3359fcd5dddda6ae4b845">
     <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=7007e129ba1dcf4c96892a88ce4b01d1">
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
-    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
+    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    <link rel="stylesheet" href="assets/css/custom/utilities/utilities.compiled.css?h=0e4b050e43daf175213586b3b453d6da">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
     <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=0e14cf893bc565659445d687ea0369ec">
 </head>
@@ -86,7 +87,7 @@
                             </nav>
                         </div>
                         <div class="flex-grow-1 p-4">
-                            <h2 class="mb-4">Obszar działalności</h2>
+                            <h2 class="mb-4">Obszar</h2>
                             <div class="table-responsive bg-white">
                                 <table class="table table-sm mb-0 border-start border-end border-top align-middle">
                                     <thead class="bg-primary text-white">
@@ -110,10 +111,10 @@
                                             <td></td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-obszar-edycja.html">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -128,10 +129,10 @@
                                             <td><span class="badge bg-warning rounded-pill px-2">Tak</span></td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-obszar-edycja.html">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -146,10 +147,10 @@
                                             <td></td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-obszar-edycja.html">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -164,10 +165,10 @@
                                             <td><span class="badge bg-warning rounded-pill px-2">Tak</span></td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-obszar-edycja.html">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -182,10 +183,10 @@
                                             <td></td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-obszar-edycja.html">Zmień</a><a class="dropdown-item" href="#">Wyklucz</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -216,7 +217,7 @@
                                             <div class="row justify-content-end">
                                                 <div class="col-auto me-auto">
                                                     <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><button class="btn btn-success" type="button">Dodaj</button></div>
+                                                        <div class="col-auto"><a class="btn btn-success" role="button" href="app-dystrybutor-obszar-dodaj.html">Dodaj</a></div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
