--- a/app-dystrybutor-taryfy.html
+++ b/app-dystrybutor-taryfy.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="assets/css/base.compiled.css?h=1793166d0cf3359fcd5dddda6ae4b845">
     <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=7007e129ba1dcf4c96892a88ce4b01d1">
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
-    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
+    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    <link rel="stylesheet" href="assets/css/custom/utilities/utilities.compiled.css?h=0e4b050e43daf175213586b3b453d6da">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
     <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=0e14cf893bc565659445d687ea0369ec">
 </head>
@@ -95,6 +96,8 @@
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
                                             <th>Taryfa</th>
+                                            <th>Data publikacji</th>
+                                            <th>Obowiązuje do</th>
                                             <th class="text-end">Opcje</th>
                                         </tr>
                                     </thead>
@@ -104,12 +107,14 @@
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
                                             <td>G11</td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-taryfy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -120,12 +125,14 @@
                                                 <div class="form-check"><input type="checkbox" class="form-check-input" checked=""></div>
                                             </th>
                                             <td>G12<br></td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-taryfy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -136,12 +143,14 @@
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
                                             <td>G12w</td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-taryfy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -152,12 +161,14 @@
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
                                             <td>C11</td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-taryfy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -168,12 +179,14 @@
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
                                             <td>C12</td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Szczegóły</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a><a class="dropdown-item" href="app-dystrybutor-taryfy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -204,7 +217,7 @@
                                             <div class="row justify-content-end">
                                                 <div class="col-auto me-auto">
                                                     <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><button class="btn btn-success" type="button">Dodaj</button></div>
+                                                        <div class="col-auto"><a class="btn btn-success" role="button" href="app-dystrybutor-taryfy-dodaj.html">Dodaj</a></div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
