--- a/app-dystrybutor-uzytkownicy.html
+++ b/app-dystrybutor-uzytkownicy.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="assets/css/base.compiled.css?h=1793166d0cf3359fcd5dddda6ae4b845">
     <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=7007e129ba1dcf4c96892a88ce4b01d1">
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
-    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
+    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    <link rel="stylesheet" href="assets/css/custom/utilities/utilities.compiled.css?h=0e4b050e43daf175213586b3b453d6da">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
     <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=0e14cf893bc565659445d687ea0369ec">
 </head>
@@ -110,10 +111,10 @@
                                             <td>robert.chojnacki@example.com<br></td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Profil</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -128,10 +129,10 @@
                                             <td>zofia.rosczak@example.com</td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Profil</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -146,10 +147,10 @@
                                             <td>krzysztof.adamczewski@example.com</td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Profil</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -164,10 +165,10 @@
                                             <td>zygmunt.sowinski@example.com</td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Profil</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -182,10 +183,10 @@
                                             <td>anna.wojcicka@example.com</td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
-                                                    <div class="col-auto"><button class="btn btn-primary btn-sm" type="button">Profil</button></div>
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-dystrybutor-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -216,7 +217,7 @@
                                             <div class="row justify-content-end">
                                                 <div class="col-auto me-auto">
                                                     <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><button class="btn btn-success" type="button">Dodaj</button></div>
+                                                        <div class="col-auto"><a class="btn btn-success" role="button" href="app-dystrybutor-uzytkownicy-dodaj.html">Dodaj</a></div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
