--- a/app-sprzedawca-kontakt.html
+++ b/app-sprzedawca-kontakt.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="assets/css/base.compiled.css?h=1793166d0cf3359fcd5dddda6ae4b845">
     <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=7007e129ba1dcf4c96892a88ce4b01d1">
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
-    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
+    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    <link rel="stylesheet" href="assets/css/custom/utilities/utilities.compiled.css?h=0e4b050e43daf175213586b3b453d6da">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
     <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=0e14cf893bc565659445d687ea0369ec">
 </head>
@@ -38,7 +39,7 @@
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
                                                 </svg><span>Oferty</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-oferty.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
+                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-umowy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
                                                 </svg><span>Umowy</span></a></li>
