--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="assets/css/base.compiled.css?h=1793166d0cf3359fcd5dddda6ae4b845">
     <link rel="stylesheet" href="assets/css/mdb/mdb.free.compiled.css?h=7007e129ba1dcf4c96892a88ce4b01d1">
     <link rel="stylesheet" href="assets/css/custom/page.compiled.css?h=a6995feb1d4f3a686a696db93a1eeaa4">
-    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=a17f6868f74c06ea08f999c17935f464">
+    <link rel="stylesheet" href="assets/css/custom/components/components.compiled.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    <link rel="stylesheet" href="assets/css/custom/utilities/utilities.compiled.css?h=0e4b050e43daf175213586b3b453d6da">
     <link rel="stylesheet" href="assets/css/custom/libs/libs.compiled.css?h=28462e4728cc29b43695b7a76328f962">
     <link rel="stylesheet" href="assets/css/custom/overrides/overrides.compiled.css?h=0e14cf893bc565659445d687ea0369ec">
 </head>
@@ -59,14 +60,14 @@
             </div>
         </header>
         <main>
-            <div class="bg--image"><img class="bg--image--background" src="assets/img/content/6282b404754ab.jpg?h=0bdb09adf68d63dce6c02fe8fb2eddeb">
-                <div class="text-white bg--image--content">
+            <div class="bg--image"><img class="bg--image--background" src="assets/img/content/gertruda-valaseviciute-xMObPS6V_gY-unsplash.jpeg?h=70ad8dd8fe23e2184f01a7f634b9da7d">
+                <div class="text-white bg--image--content bg-primary bg-opacity-50">
                     <div class="container">
-                        <div class="py-5">
-                            <h1>Wybierz najlepszą ofertę</h1>
+                        <div class="py--60">
                             <div class="row">
-                                <div class="col-4">
-                                    <div class="row gy-3 row-cols-1">
+                                <div class="col-5">
+                                    <h1 class="mb-4">Wybierz najlepszą ofertę</h1>
+                                    <div class="row gy-4 row-cols-1">
                                         <div class="col-auto">
                                             <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-1" name="osd"><label class="form-check-label" for="formCheck-1">Gospodarstwo domowe</label></div>
                                         </div>
@@ -78,7 +79,7 @@
                                             <div class="btn-group btn-group-lg shadow-none m-n2" role="group"><a class="btn btn-white rounded-0 m-2" role="button" href="search.html">Szukaj</a><button class="btn btn-outline-white rounded-0 m-2" type="button">Dowiedz się więcej</button></div>
                                         </div>
                                         <div class="col">
-                                            <p class="mb-0 small">na podstawie kodu pocztowego system informatyczny przypisze Tobie właściwego Operatora Systemu Dystrybucyjnego (OSD) dzięki temu, porównanie cen prądu będzie bardzo dokładne.</p>
+                                            <p class="mb-0 small">Na podstawie kodu pocztowego system informatyczny przypisze Tobie właściwego Operatora Systemu Dystrybucyjnego (OSD) dzięki temu, porównanie cen prądu będzie bardzo dokładne.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -87,40 +88,48 @@
                     </div>
                 </div>
             </div>
-            <div class="py-5">
+            <div class="py--80">
                 <div class="container">
-                    <div>
-                        <h2 class="mb-4">Jak zmienić dostawcę energii?</h2>
-                        <div class="row row-cols-5">
-                            <div class="col">
-                                <div class="d-flex justify-content-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-circle-fill fs-2">
-                                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
-                                    </svg></div>
-                                <p class="text-center mb-0">Wyszukaj oferty</p>
+                    <h1 class="text-center mb-5">Jak zmienić dostawcę energii?</h1>
+                    <div class="row">
+                        <div class="col">
+                            <div class="card border-3 shadow-none border">
+                                <div class="card-body">
+                                    <h5 class="card-title">Wyszukaj oferty</h5>
+                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                </div>
                             </div>
-                            <div class="col">
-                                <div class="d-flex justify-content-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-circle-fill fs-2">
-                                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
-                                    </svg></div>
-                                <p class="text-center mb-0">Porównaj ceny prądu</p>
+                        </div>
+                        <div class="col">
+                            <div class="card border-3 shadow-none border">
+                                <div class="card-body">
+                                    <h5 class="card-title">Porównaj ceny prądu</h5>
+                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                </div>
                             </div>
-                            <div class="col">
-                                <div class="d-flex justify-content-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-circle-fill fs-2">
-                                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
-                                    </svg></div>
-                                <p class="text-center mb-0">Wypełnij formularz taniej energii dla domu</p>
+                        </div>
+                        <div class="col">
+                            <div class="card border-3 shadow-none border">
+                                <div class="card-body">
+                                    <h5 class="card-title">Wypełnij formularz taniej energii dla domu</h5>
+                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                </div>
                             </div>
-                            <div class="col">
-                                <div class="d-flex justify-content-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-circle-fill fs-2">
-                                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
-                                    </svg></div>
-                                <p class="text-center mb-0">Zapoznaj się z umową i wyślij zapytanie</p>
+                        </div>
+                        <div class="col">
+                            <div class="card border-3 shadow-none border">
+                                <div class="card-body">
+                                    <h5 class="card-title">Zapoznaj się z umową i wyślij zapytanie</h5>
+                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                </div>
                             </div>
-                            <div class="col">
-                                <div class="d-flex justify-content-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-circle-fill fs-2">
-                                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
-                                    </svg></div>
-                                <p class="text-center mb-0">Otrzymaj ofertę</p>
+                        </div>
+                        <div class="col">
+                            <div class="card border-3 shadow-none border">
+                                <div class="card-body">
+                                    <h5 class="card-title">Otrzymaj ofertę</h5>
+                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -261,12 +270,14 @@
                     </div>
                 </div>
             </div>
-            <div class="text-white py-5 bg-black">
-                <div class="container">
-                    <div>
-                        <h1 class="fw-normal text-center mb-4">Dołącz do naszego newslettera</h1>
-                        <p class="text-center mb-4">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <div class="d-flex justify-content-center"><button class="btn btn-light btn-lg shadow-none" type="button">Czytaj dalej</button></div>
+            <div class="bg--image"><img class="bg--image--background" src="assets/img/content/maximalfocus-HakTxidk36I-unsplash.jpeg?h=68738f0a4be0201493b46a721f184161">
+                <div class="text-white bg--image--content py--80 bg-black bg-opacity-50">
+                    <div class="container">
+                        <div>
+                            <h1 class="fw-normal text-center mb-4">Dołącz do naszego newslettera</h1>
+                            <p class="text-center mb-4">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            <div class="d-flex justify-content-center"><button class="btn btn-light btn-lg shadow-none" type="button">Czytaj dalej</button></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -279,7 +290,7 @@
                             <div class="row gx-5 justify-content-between">
                                 <div class="col">
                                     <h3>Brand Name</h3>
-                                    <p class="lead mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nibh magna, commodo eget dictum eu, pretium et nisl. Sed ut sapien ex. Duis at urna a eros dapibus luctus. Phasellus urna lectus, aliquet vitae facilisis eget, lacinia vel lacus. Mauris aliquam aliquet lacus eget hendrerit. Fusce lorem mi, pharetra rutrum faucibus nec, sagittis id lorem. In semper id lorem nec laoreet.<br></p>
+                                    <p class="fw-bold mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nibh magna, commodo eget dictum eu, pretium et nisl. Sed ut sapien ex. Duis at urna a eros dapibus luctus. Phasellus urna lectus, aliquet vitae facilisis eget, lacinia vel lacus. Mauris aliquam aliquet lacus eget hendrerit. Fusce lorem mi, pharetra rutrum faucibus nec, sagittis id lorem. In semper id lorem nec laoreet.<br></p>
                                 </div>
                                 <div class="col-auto">
                                     <div class="row">
@@ -325,11 +336,11 @@
                                     </ul>
                                 </div>
                                 <div class="col-auto">
-                                    <ul class="list-inline fs-3 mb-0 mx--n2">
-                                        <li class="list-inline-item mx-2"><a class="link-white" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-linkedin">
+                                    <ul class="list-inline fs-3 mb-0 mx--n10">
+                                        <li class="list-inline-item mx--10"><a class="link-white" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-linkedin">
                                                     <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
                                                 </svg></a></li>
-                                        <li class="list-inline-item mx-2"><a class="link-white" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter">
+                                        <li class="list-inline-item mx--10"><a class="link-white" href="#!"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter">
                                                     <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"></path>
                                                 </svg></a></li>
                                     </ul>
